src/objects/Tran1__c.object
<CustomObject>
    <description>*** Account Order Details</description>
    <fields>
        <fullName>AccMstDPName__c</fullName>
        <label>会計DP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstGPName__c</fullName>
        <label>会計GP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstOPName__c</fullName>
        <label>会計OP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>会計宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountProviso__c</fullName>
        <label>但し書き内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReceiptName__c</fullName>
        <label>請求書宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountoutside__c</fullName>
        <formula>if ( Field44__c = &quot;00&quot; &amp;&amp;  (NOT(ISBLANK(Field20__c)) || CONTAINS( Field5__c , &quot;●&quot;) )  &amp;&amp; ( Field2__c =&quot;M&quot;  ||  Field2__c =&quot;P&quot; ||  Field2__c =&quot;R&quot;) &amp;&amp;  Field3__c = &quot;1&quot; &amp;&amp;  Field4__c =&quot;1&quot; &amp;&amp;  Field22__c   &lt;&gt;  &quot;+000&quot; &amp;&amp;  VoidReceiptNo__c =&quot;0&quot; &amp;&amp;  noneaccount__c = false , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$取引種別 次の文字列と一致する 00  かつ $単価 次の文字列と一致しない 0 かつ 商品種別 次の文字列と一致する M,P かつ 処理種別１ 次の文字列と一致する 1 かつ 処理種別２ 次の文字列と一致する 1 かつ 残数量 次の文字列と一致しない +000 かつ $VoidReceiptNo 次の文字列と一致する 0  かつ 集計対象外 次の文字列と一致する False
飲み放題のときは売価¥0でも集計対象とするため</inlineHelpText>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>普通の商品は　デフォルト値：通常で設定する、特別商品に対して、別々、商品種別に設定する
前受付金の場合、会計商品マスたに、価格はNull設定して、入力画面に自由入力する</description>
        <label>商品処理種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>前受付金</fullName>
                </value>
                <value>
                    <fullName>室料</fullName>
                </value>
                <value>
                    <fullName>朝食</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchProcessStatusDiv__c</fullName>
        <label>バッチ処理区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <formula>Field7__r.GPChange__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryItem__c</fullName>
        <description>マスタの更新ごとにチェック必要、商品コードの範囲をチェックしているため、レストランにて食事&amp;ドリンクかまたは、喫茶の判断は、会計書の客単価 &gt;= ¥3,250(料理の最低金額)のときは、食事&amp;ドリンクとなる
if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp;  Field1__r.TeaTimeFlag__c = 0 &amp;&amp; (  Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 1, if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp; ( Categorya__c =&quot;B1_ドリンク関連&quot; ||  Categorya__c =&quot;A1_料理関連&quot; ), 2, if ( Field7__r.nextitemcode__c &gt;= 3100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 4000 &amp;&amp; ( Field7__r.OP__r.OPcode1__c = 32 || Field7__r.OP__r.OPcode1__c = 33 ), 3, if ( Field7__r.nextitemcode__c &gt;= 7100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 8600 &amp;&amp; ( Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 4, if ( Field7__r.OP__r.OPcode1__c = 30, 5 , 0)))))</description>
        <formula>if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp;  Field1__r.TeaTimeFlag__c = 0 &amp;&amp; (  Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 1, if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp; ( Categorya__c =&quot;B1_ドリンク関連&quot; ||  Categorya__c =&quot;A1_料理関連&quot; ), 2, if ( Field7__r.nextitemcode__c &gt;= 3100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 4000 &amp;&amp; ( Field7__r.OP__r.OPcode1__c = 32 || Field7__r.OP__r.OPcode1__c = 33 ), 3, if ( Field7__r.nextitemcode__c &gt;= 7100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 8600 &amp;&amp; ( Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 4, if ( Field7__r.OP__r.OPcode1__c = 30, 5 , 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>マスタの商品コードの範囲チェック   1:賑わい亭でお食事(OPcode=会席またはお膳), 2:賑わい亭で喫茶(OPcode=一般飲料またはワンドリンク), 3:賑わい亭の入浴(OPcode=入浴料またはタオル・浴衣), 4:お部屋でお食事(OPcode=会席またはお膳,一般飲料,), 5:宿泊(OPcode=宿泊室料)</inlineHelpText>
        <label>$CategoryItem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Field7__r.OP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categorya__c</fullName>
        <formula>Field7__r.OP__r.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CookInfo__c</fullName>
        <label>料理進捗情報</label>
        <length>24000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CookMemo__c</fullName>
        <label>料理メモ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>減塩</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <formula>Field7__r.DPChange__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceNo__c</fullName>
        <description>オーダーエントリから注文するとき、端末デバイス(タブレット/PC)の端末#情報を格納する</description>
        <label>端末番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionNameI__c</fullName>
        <formula>CASE(  CategoryItem__c  , 1, &quot;D_レストラン部門&quot;, 2, &quot;D_レストラン部門&quot;, 3, &quot;D_レストラン部門&quot;, 4, &quot;E_宿泊部門&quot;,  5, &quot;E_宿泊部門&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親メニューコード</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipName>Tran1Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>親メニュー名称</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>自社コード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoodDetailFlg__c</fullName>
        <formula>Field7__r.CookCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$会席商品フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genkaritsu__c</fullName>
        <formula>if ( rtaxsts__c = &quot;0&quot; , if (Field39__c  &lt;&gt;  0,Field47__c /  Tankanonetax__c , 1), 1   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>税ステータスが通常のときは、原価/売価(税込)/1.05、税金のときは、原価率100%とし、利益率はゼロとなる。</inlineHelpText>
        <label>原価率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GoukeinoneTax__c</fullName>
        <description>Tankanonetax__c * Field40__c
if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if (  Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0.00, Field41__c/(1 + TaxRate__c), (Field41__c/(1 + TaxRate__c)) + 1.00), 0), Field41__c)
if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if (  Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0, Field41__c/(1 + TaxRate__c), ROUND(Field41__c/(1 + TaxRate__c),0 )), 0), Field41__c)
if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if ( Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0.00, Field41__c/(1 + TaxRate__c), (Field41__c/(1 + TaxRate__c)) + (1.00 - MOD(Field41__c,(1 + TaxRate__c)))), 0), Field41__c)

if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if ( Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0, Field41__c/(1 + TaxRate__c), ROUND((Field41__c/(1 + TaxRate__c)) + (1.00 - MOD(Field41__c,(1 + TaxRate__c))),0) ), 0), Field41__c)</description>
        <formula>Tankanonetax__c * Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>単価ではなく、$合計金額（税込）に対して、直接税抜き計算、端数があれば切り上げ処理</inlineHelpText>
        <label>$合計金額（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceNoShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>請求書に該当商品情報を明細に非表示する</description>
        <label>請求書非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>RelAccount__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KanjoHojo__c</fullName>
        <formula>Field7__r.KanjoKamokuRef__r.KanjoHojoname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$補助科目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanjo__c</fullName>
        <formula>Field7__r.KanjoKamokuRef__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>勘定科目</inlineHelpText>
        <label>$科目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadInfo__c</fullName>
        <formula>IF (Field1__r.Relreserve__c != null, CASESAFEID(Field1__r.Relreserve__r.LeadIndexRef__c) &amp; &quot;:&quot; &amp;Field1__r.Relreserve__r.LeadIndexSubId__c&amp; &quot;:&quot; &amp; TEXT(Field1__r.Relreserve__r.RoomGroupNo__c),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約連泊情報</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoShowRequestFlg__c</fullName>
        <description>該当項目値は「１」する場合、会計編集画面からお客様は手動に非表示に設定する</description>
        <label>非表示手動請求フラグ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPcode__c</fullName>
        <description>CASE(Field26__r.Name, &quot;ドリンク&quot;,0.20, &quot;ミニバー&quot;, 0.20, &quot;飲み放題&quot;, 0.27, &quot;宿泊 ドリンク&quot;, 0.20, &quot;宿泊 飲み放題&quot;, 0.27, &quot;コース&quot;,0.30, &quot;アラカルト&quot;, 0.30, &quot;宿泊 コース&quot;,0.30, &quot;宿泊 アラカルト&quot;, 0.30, &quot;室料&quot;, 0.08, &quot;宿泊 売店&quot;,0.50, &quot;売店&quot;,0.50, case(Field25__r.Name,&quot;婚礼 飲料売上&quot;,0.20,&quot;婚礼 料理売上&quot;,0.30, 0.00))</description>
        <formula>if ( TargetCost__c  = 0, 0.30, TargetCost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>原価率目標値、GP codeにて、料理30%、ドリンク20%、売店50%、室料8%、飲み放題は内訳の平均値27%</inlineHelpText>
        <label>$OPcode</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptionNo__c</fullName>
        <description>機能処理用項目、業務利用不可</description>
        <label>オプション商品グループNo（システム用）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionPlanKey__c</fullName>
        <description>機能処理用項目、業務利用不可</description>
        <formula>IF (
ISBLANK(OptionNo__c ), 
&apos;&apos;,
( Field1__c  
&amp; &apos;_&apos;
&amp; Field7__c 
&amp; &apos;_&apos;
&amp; OptionNo__c 
&amp; &apos;_&apos;
&amp; TEXT(SplitGroupNo__c) 
&amp; &apos;_&apos;
&amp; Text( Field41__c / IF ( NULLVALUE(VALUE(Field21__c ), 0) == 0, 1, VALUE(Field21__c )))
)  
)</formula>
        <label>$オプション商品グループNo（システム用）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderSyncInfo__c</fullName>
        <label>オーダー明細情報(PMSシステム用)</label>
        <length>4056</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderTimeStmp__c</fullName>
        <label>オーダー時間別</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTime__c</fullName>
        <description>オーダーエントリ画面から注文するとき、注文時刻情報を格納する</description>
        <label>オーダー日付</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <inlineHelpText>POSレジ番号</inlineHelpText>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTran1Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親会計明細</label>
        <referenceTo>Tran1__c</referenceTo>
        <relationshipLabel>会計明細</relationshipLabel>
        <relationshipName>ParentTran1Ref</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayProductRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支払商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>会計明細 (支払商品)</relationshipLabel>
        <relationshipName>TranPayProductRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>支払種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDetailSyncInfo__c</fullName>
        <description>会計編集画面、直接入力のプラン明細の単価を格納する、該当項目で、明細自動作成・更新する場合、該当単価で、明細へ連携更新を行う 
Format: 商品ID/会計明細ID,単価:商品ID/会計明細ID,単価 書式で複数件格納する（最大600件明細格納可能です）</description>
        <label>プラン明細個別設定情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanExpandFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>見積もり明細から会計明細に新規作成する場合、該当フラグはTRUEに設定する、その場合、会計明細（INSERT)トリガーに、プラン明細のBreakDown作成機能は起動しません</description>
        <label>プラン明細非展開フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当明細は既に印刷済がどうか識別フラグ</inlineHelpText>
        <label>印刷済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelAccount__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>会計明細</relationshipLabel>
        <relationshipName>TitemYObe</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReservedTypeCal__c</fullName>
        <formula>TEXT(Field1__r.Relreserve__r.ReservedType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約タイプ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReservedType__c</fullName>
        <label>予約タイプ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNameCal__c</fullName>
        <formula>BLANKVALUE(Field1__r.Relreserve__r.Rroom__r.Name, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$お部屋名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>お部屋名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNo__c</fullName>
        <description>会計書のNo.項目</description>
        <label>RowNo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RsvSalesDateCal__c</fullName>
        <description>書式：YYYYMMDD</description>
        <formula>RelAccount__r.Name</formula>
        <label>売上日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <formula>Field1__r.Seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <description>サービス料金（％）</description>
        <label>サービス料</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShopCodeCal__c</fullName>
        <formula>NULLVALUE (Field1__r.Relreserve__r.refTypeOfRooms__r.ShopInfoRef__r.ShopCode__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>店舗コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialTax__c</fullName>
        <label>特別税</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SplitGroupNo__c</fullName>
        <label>分割NO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subprice__c</fullName>
        <inlineHelpText>サブ単価</inlineHelpText>
        <label>f単価(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TableNo__c</fullName>
        <label>TableNo</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TankanonetaxNew__c</fullName>
        <label>単価(税抜)(増税対応)(システム用)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tankanonetax__c</fullName>
        <description>if ( Field7__r.StsTaxfee__c = &quot;0&quot;, if ( MOD(Field39__c,(1 + TaxRate__c)) = 0,Field39__c /(1 + TaxRate__c), if ( ROUND(MOD(Field39__c,(1 + TaxRate__c)),2) &gt;= 0.30, ROUND(Field39__c /(1 + TaxRate__c),0),Field39__c /(1 + TaxRate__c) )), Field39__c)

2012/07/04 四捨五入から切り上げ設定</description>
        <formula>/*if ( Field7__r.StsTaxfee__c = &quot;0&quot;, CEILING(Field39__c /(1 + TaxRate__c)), Field39__c) */
/*
    // 1:税込、サービス料抜き
    // 2:税込、サービス料込
    // 3:税抜、サービス料抜き
    // 4:税抜、サビース料込
*/
/* 2013/07/24 EDIT
Case ($Setup.ps__CommDefine__c.ps__UnitPriceDefKb__c ,
1, CEILING( ps__Field39__c / ( 1 +  NULLVALUE (ps__TaxRate__c, 0) ) ),
2, CEILING( ps__Field39__c / ( (1 + NULLVALUE (ps__TaxRate__c, 0) ) * ( 1 + NULLVALUE (ps__ServiceRate__c, 0) ) ) ),
3, ps__Field39__c ,
0)
*/
/* 2015/10/15 EDIT
Case (
   VALUE( UnitPriceDefKbCal__c ) ,
1, CEILING( Field39__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
2, CEILING( Field39__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ),
3, CEILING( Field39__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
0)
*/
/* 2016/03/01 EDIT
Case (
   VALUE( UnitPriceDefKbCal__c ) ,
1, CEILING( Field39__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
2, CEILING( Field39__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ),
3, CEILING( Field39__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
4, Field39__c,
0)

*/
/* 2019/07/30 軽減税率機能対応 WGCH BEGIN */
IF (NULLVALUE (TankanonetaxNew__c, 0) != 0, TankanonetaxNew__c, 
/* 2019/07/30 軽減税率機能対応 WGCH END */
IF (NULLVALUE (TankawithoutTaxSys__c, 0) != 0, TankawithoutTaxSys__c,

IF (
 $Setup.CommDefine__c.AccountNoTaxCalFlg__c != true ||
 $Setup.CommDefine__c.RoundType__c = 2,
	Case (
	   VALUE( UnitPriceDefKbCal__c ) ,
	1, CEILING( VALUE( Field20__c ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
	2, CEILING( VALUE( Field20__c ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ),
	3, CEILING( VALUE( Field20__c ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
	4, CEILING( VALUE( Field20__c )),
	0)
	, 
	IF($Setup.CommDefine__c.RoundType__c = 0,
		Case (
		   VALUE( UnitPriceDefKbCal__c ) ,
		1, FLOOR( VALUE( Field20__c ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
		2, FLOOR( VALUE( Field20__c ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ),
		3, FLOOR( VALUE( Field20__c ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
		4, FLOOR( VALUE( Field20__c ) ),
		0)
		,
		Case (
		   VALUE( UnitPriceDefKbCal__c ) ,
		1, ROUND( VALUE( Field20__c ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 +  NULLVALUE (TaxRate__c, 0) ) , 0),
		2, ROUND( VALUE( Field20__c ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) , 0),
		3, ROUND( VALUE( Field20__c ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) , 0),
		4, ROUND( VALUE( Field20__c ) , 0),
		0)
	)
)

)
/* 2019/07/30 軽減税率機能対応 WGCH BEGIN */
)
/* 2019/07/30 軽減税率機能対応 WGCH END */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>会計マスタの税ステータスが税額そのもののときは単価（税抜）の金額は単価そのものとする、端数処理について、端数が存在すれば切り上げ処理となっている。
***近似の0.3スライス</inlineHelpText>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TankawithoutTaxSys__c</fullName>
        <inlineHelpText>画面、レポートなど使わない、システム内部利用項目</inlineHelpText>
        <label>単価(税抜)（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TankawithoutTax__c</fullName>
        <label>$$単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetCost__c</fullName>
        <label>原価率目標値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalPriceIncTax__c</fullName>
        <label>RFU</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerIsStopFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>トリガー処理対象外（システム用）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomNameCal__c</fullName>
        <formula>BLANKVALUE(Field1__r.Relreserve__r.refTypeOfRooms__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部屋タイプ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomName__c</fullName>
        <label>部屋タイプ名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKbCal__c</fullName>
        <formula>BLANKVALUE(UnitPriceDefKb__c, BLANKVALUE( Field1__r.UnitPriceDefKb__c, &quot;2&quot; ) )</formula>
        <label>$会計商品単価定義区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <defaultValue>TEXT($Setup.CommDefine__c.UnitPriceDefKb__c)</defaultValue>
        <label>会計商品単価定義区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseDateCal__c</fullName>
        <formula>RelAccount__r.Salesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UseDate__c</fullName>
        <label>利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VoidReceiptNo__c</fullName>
        <formula>IF ( Field1__r.Field40__c  = &quot;&quot;, &quot;0&quot;, Field1__r.Field40__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$VoidReceiptNo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>freecost__c</fullName>
        <formula>IF (  CONTAINS(Field5__c, &quot;●&quot;)  ,  Field47__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f原単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freeprice__c</fullName>
        <formula>if ( Field7__r.StsTaxfee__c = &quot;0&quot;, if ( MOD( Subprice__c ,(1 + TaxRate__c)) = 0,Subprice__c /(1 + TaxRate__c), if ( ROUND(MOD(Subprice__c,(1 + TaxRate__c)),2) &gt;= 0.30, ROUND(Subprice__c /(1 + TaxRate__c),0),Subprice__c /(1 + TaxRate__c) )), Subprice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freetotal1__c</fullName>
        <formula>Subprice__c  *  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f合計金額(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freetotal2__c</fullName>
        <formula>freeprice__c  *  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f合計金額(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freetotal3__c</fullName>
        <formula>freecost__c  *  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f原単価計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>guestRoom__c</fullName>
        <description>if ( value(Field25__r.Field1__c) &gt;= 41 &amp;&amp; value(Field25__r.Field1__c) &lt;= 66, Field25__r.Name , Field1__r.Field150__r.Name )</description>
        <formula>if ( value(Field25__r.Field1__c) &gt;= 41 &amp;&amp;  value(Field25__r.Field1__c) &lt;= 66,  Field25__r.Name ,  Field1__r.Field150__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DPコードが客室または広間のときは、DPコードをそのまま返す、そうでなければ、テーブル#を返す</inlineHelpText>
        <label>$GuestRoom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inside__c</fullName>
        <formula>if (  Accountoutside__c = 1, 
IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;, &quot;対象&quot;),
IF(Field44__c = &quot;30&quot; &amp;&amp; ISBLANK(ParentTran1Ref__c), IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;VOID&quot;, &quot;VOID対象&quot;), 
&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noneaccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>profit__c</fullName>
        <formula>1 - Genkaritsu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>粗利益率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>profitnonetax__c</fullName>
        <formula>value(TEXT(profitt__c)) * Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>粗利益計(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>profitt__c</fullName>
        <formula>if (  rtaxsts__c  = &quot;0&quot;,  Tankanonetax__c  -  Field47__c, Field39__c- Field47__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売価-原価、税ステータスありなら、単価(税抜)売価/1.05-原価</inlineHelpText>
        <label>粗利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rtaxsts__c</fullName>
        <formula>Field7__r.StsTaxfee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$税ステータス</label>
        <type>Text</type>
    </fields>
    <label>会計明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>会計明細TranR#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>